--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         src="images/img1.jpg" 
         alt="Desenho de uma pessoa vestindo uma camisa amarela em uma sala com móveis">
 
-        <h1>Ambiente <span>únicos</span> para você!</h1>
+        <h1>Ambientes <span>únicos</span> para você!</h1>
         <p>
           Nós criamos ambientes <strong>exclusívos</strong> e <strong>únicos</strong>, 
           com muito bom gosto e profissionalismo, 
